# letlca

./: .gitignore
dr/: dr.uproject
dron_py/: config.py  drone_client.py  drone_env.py  main.py  mission_wrapper.py  pyproject.toml  test.py  test_round.py  test_single.py  train_drone.py  utils.py  v2.py  vec_normalize.pkl  vecnorm.pkl
dron_py/logs/: evaluations.npz
dron_py/logs/PPO_1/: events.out.tfevents.1782815471.DESKTOP-LL31HV8.13132.0
dron_py/logs/PPO_10/: events.out.tfevents.1782817502.DESKTOP-LL31HV8.18892.0
dron_py/logs/PPO_11/: events.out.tfevents.1782817582.DESKTOP-LL31HV8.12316.0
dron_py/logs/PPO_12/: events.out.tfevents.1782817912.DESKTOP-LL31HV8.16536.0
dron_py/logs/PPO_13/: events.out.tfevents.1782822478.DESKTOP-LL31HV8.16320.0
dron_py/logs/PPO_14/: events.out.tfevents.1782822557.DESKTOP-LL31HV8.2956.0
dron_py/logs/PPO_15/: events.out.tfevents.1782822924.DESKTOP-LL31HV8.19192.0
dron_py/logs/PPO_16/: events.out.tfevents.1782824181.DESKTOP-LL31HV8.16436.0
dron_py/logs/PPO_17/: events.out.tfevents.1782824631.DESKTOP-LL31HV8.8472.0
dron_py/logs/PPO_18/: events.out.tfevents.1782824713.DESKTOP-LL31HV8.16132.0
dron_py/logs/PPO_19/: events.out.tfevents.1782824796.DESKTOP-LL31HV8.19124.0
dron_py/logs/PPO_2/: events.out.tfevents.1782815611.DESKTOP-LL31HV8.19056.0
dron_py/logs/PPO_20/: events.out.tfevents.1782824925.DESKTOP-LL31HV8.12344.0
dron_py/logs/PPO_21/: events.out.tfevents.1782825159.DESKTOP-LL31HV8.16852.0
dron_py/logs/PPO_22/: events.out.tfevents.1782825614.DESKTOP-LL31HV8.14692.0
dron_py/models/: vec_normalize.pkl
(+38 files in other folders)
